--- a/Blog.Web/Views/_ViewImports.cshtml
+++ b/Blog.Web/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Blog.Web
 @using Blog.Web.Models
 @using Blog.Entity.DTOs;
+@using Blog.Entity.DTOs.Articles;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
