--- a/Blog.Web/Areas/Admin/Views/Article/Index.cshtml
+++ b/Blog.Web/Areas/Admin/Views/Article/Index.cshtml
@@ -7,8 +7,8 @@
 
     <!-- Basic Bootstrap Table -->
     <div class="card">
-        <h5 class="card-header">Table Basic</h5>
-        <div class="table-responsive text-nowrap">
+        <div class="table-responsive text-nowrap m-5">
+            <a class="btn btn-primary mb-3" asp-area="Admin" asp-controller="Article" asp-action="Add">Ekle <i class="bx bx-plus"></i></a>
             <table class="table table-bordered" id="articlesTable" width="100%" cellspacing="0">
                 <thead>
                     <tr>
