--- a/Blog.Web/Areas/Admin/Views/Article/Add.cshtml
+++ b/Blog.Web/Areas/Admin/Views/Article/Add.cshtml
@@ -22,7 +22,7 @@
                             <textarea asp-for="Content" type="text" class="form-control mb-3" id="defaultFormControlInput" style="min-height:360px;" placeholder="Lütfen içerik giriniz" aria-describedby="defaultFormControlHelp"></textarea>
                         </div class="form-group">
                           <div class="form-group">
-                            <button type="submit" class="btn btn-primary btn-block">Ekle</button>
+                            <button type="submit" class="btn btn-primary btn-block">Güncelle</button>
                         </div>
                     </div>
                 </form>
