--- a/Blog.Web/Areas/Admin/Views/Article/Add.cshtml
+++ b/Blog.Web/Areas/Admin/Views/Article/Add.cshtml
@@ -8,21 +8,24 @@
         <div class="col-md-12">
             <div class="card mb-4">
                      <form asp-controller="Article" asp-action="Add" method="post" enctype="multipart/form-data">
+                         <div asp-validation-summary="ModelOnly"></div>
                     <div class="card-body">
                          <div>
                              <select id="categoryList" class="form-control" asp-for="CategoryId" asp-items="@(new SelectList(Model.Categories,"Id","Name"))"></select>
-                      <span asp-validation-for="CategoryId" class="text-danger"></span>  
+                              <span asp-validation-for="CategoryId" class="text-danger"></span>  
                          </div>
                         <div class="form-group"> 
                             <label asp-for="Title" id="defaultFormControlInput" class="form-label">Başlık</label>
                             <input asp-for="Title" type="text" class="form-control mb-3" id="defaultFormControlInput" placeholder="Lütfen başlık giriniz" aria-describedby="defaultFormControlHelp">
+                           <span asp-validation-for="Title" class="text-danger"></span>  
                         </div>
                         <div class="form-group">
                             <label  asp-for="Content" id="defaultFormControlInput" class="form-label">İçerik</label>
                             <textarea asp-for="Content" type="text" class="form-control mb-3" id="defaultFormControlInput" style="min-height:360px;" placeholder="Lütfen içerik giriniz" aria-describedby="defaultFormControlHelp"></textarea>
+                          <span asp-validation-for="Content" class="text-danger"></span>  
                         </div class="form-group">
                           <div class="form-group">
-                            <button type="submit" class="btn btn-primary btn-block">Güncelle</button>
+                            <button type="submit" class="btn btn-primary btn-block">Ekle</button>
                         </div>
                     </div>
                 </form>
